enrique_jimenez/session-01/exercise-02/mariadb-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mariadb
  namespace: exercise-02
  labels:
    app: mariadb
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - name: mariadb
        image: bitnami/mariadb:latest
        livenessProbe:
          tcpSocket:
            port: 3306
        readinessProbe:
          tcpSocket:
            port: 3306
        ports:
          - containerPort: 3306
            name: mysql
