enrique_jimenez/session-01/exercise-02/wordpress-deployment-canary.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wordpress-canary
  namespace: exercise-02
  labels:
    app: wordpress
    track: canary
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - name: wordpress
        image: bitnami/wordpress:4.9.5
        livenessProbe:
          httpGet:
            path: /wp-admin
            port: http
          initialDelaySeconds: 20
          periodSeconds: 10    
        readinessProbe:
          httpGet:
            path: /wp-admin      
            port: http
          initialDelaySeconds: 30
        ports:
          - containerPort: 80
            name: http
