enrique_jimenez/session-01/exercise-02/mariadb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: exercise-02
spec:
  type: ClusterIP
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: mariadb
